# Collision-detection

./: .gitignore  CMakeLists.txt  README.md
include/: AABB.hh  Dot.hh  GeometricUtils.hh  GeometryUtils.hh  Matrix.hh  OBB.hh  Point.hh  Point2D.hh  Point3D.hh  QuickHull.hh  Shape2D.hh  Sphere.hh  Triangle.hh
include/data_structures/: AABB.hh  Capsule.hh  Lozenge.hh  OBB.hh  Shape2D.hh  Sphere.hh
src/: AABB.cpp  Dot.cpp  GeometricUtils.cpp  GeometryUtils.cpp  Matrix.cpp  OBB.cpp  Point.cpp  Point2D.cpp  Point3D.cpp  QuickHull.cpp  Sphere.cpp  Triangle.cpp  main.cpp
src/data_structures/: AABB.cpp  Capsule.cpp  Lozenge.cpp  OBB.cpp  Sphere.cpp
